# understanding_causal_rl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  style.mplstyle
.github/workflows/: ci.yml
configs/: behaviour_ablation.yaml  bias_sweep.yaml  continuous_only.yaml  coverage_stress.yaml  discrete_only.yaml  full_matrix.yaml  horizon_sweep.yaml  paper.yaml  paper_bandit.yaml  paper_bandit_offpolicy.yaml  paper_mini.yaml  paper_smoke.yaml  sample_sweep.yaml  smoke.yaml  smoke_quick.yaml  smoke_v7.yaml  smoke_v8.yaml
docs/: architecture.md  behaviour_policies.md  cells.md  diagnosing_a_run.md  experiment_plan.md  figures.md  metric.md  reading_results.md  reproducing_paper.md  v15_bias_sweep_investigation.md  v15_partial_id_overfitting.md  v17_gap_metric_dedup.md  v18_bound_metric_gating.md  v19_bandit_cell_collapse.md  v20_bandit_story_complete.md  v21_offline_bandit_algos.md  v22_bandit_failure_case.md  v23_tabular_env_cache.md  v25_simpson_bandit.md  v26_policy_fix.md
scripts/: audit_alpha_conf_strength.py  audit_alpha_conf_strength_sequential.py  audit_temporal_z_leak_sequential.py  benchmark_speed.py  estimate_run_time.py  make_all_figures.py  make_summary.py  run_full_matrix.py  run_full_matrix_slurm.py  run_single.py  smoke_v26_paper_bandit_offpolicy.py
tests/algos/: test_a2c.py  test_confounded_dqn.py  test_cql.py  test_ddpg.py  test_dqn.py  test_offline_bandit_ipw.py  test_offline_bandit_naive.py  test_ppo.py  test_simpson_argmax_flip.py  test_ucb_family.py  test_ucb_family_distinct.py
tests/behaviour/: test_bias_continuity.py  (+9 more)
(+157 files in other folders)
