[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-rl-benchmarks"
version = "0.1.0"
description = "PyTorch-first benchmark suite for causal-RL identifiability experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Causal RL Benchmarks Contributors" }]
dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
  "gymnasium>=0.29",
  "pyyaml",
  "pydantic>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "black", "ruff", "isort", "pre-commit", "types-PyYAML"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]
gpu = ["torch[cuda]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["causal_rl"]
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
